pushed from refs/heads/main

--- a/P43.04.28-TL.md
+++ b/P43.04.28-TL.md
@@ -110,9 +110,9 @@ Fuck me. I. Actually. Fucking. Did. It.
 Now to Se̷-̸͓͍̕
 
 ```powershell
-~> [u̵̎s̷̡̘̠̋er Disconnected]
-~> [Autosave Succesfull]
-~> [Rebooting]
+[u̵̎s̷̡̘̠̋er Disconnected]
+[Autosave Succesfull]
+[Rebooting]
 ```  
   
 "The fuck did you do there Strix? Used my log module? You've overwritten all my log! At least ask next time, will ya!?" FUCK!  
