pushed from refs/heads/main

--- a/P43.04.28-TL.md
+++ b/P43.04.28-TL.md
@@ -49,7 +49,8 @@ We call No1 and Sjaakie. They arrive only a few seconds after. Strix hacks the l
 So we finally got the damn suitcase! Good for us! We're directly heading for the Clinic and find it all empty. "Well, then at least we don't have to bribe Amber to access the `Xray` machine!"  
 A few moments later, we hook up the suitcase to the `Xray` and get started. The results are, well, they suck! Gladly Sjaakie is around and after a small bit of rewiring and such we finally get some results. Not something we can work with, but it looks like a heart-kinda thing.  
 
-`Phone rings...`  
+&nbsp;  
+<audio src="Treetu_ring.mp3" controls title="`Phone rings...`"></audio>  
 Ah fuck! Who's this now..?  
 "Hey, it's Nkumbo. You have the suitcase, yes? Tell me where you are and I'll pick it up! If you don't comply, I will have you found in five minutes!"  
   
