pushed from refs/heads/main

--- a/P43.04.28-TL.md
+++ b/P43.04.28-TL.md
@@ -52,7 +52,7 @@ A few moments later, we hook up the suitcase to the `Xray` and get started. The 
 &nbsp;  
 <audio src="Treetu_ring.mp3" controls title="`Phone rings...`"></audio>  
 Ah fuck! Who's this now..?  
-"Hey, it's Nkumbo. You have the suitcase, yes? Tell me where you are and I'll pick it up! If you don't comply, I will have you found in five minutes!"  
+"Hey, it's Nekumbo. You have the suitcase, yes? Tell me where you are and I'll pick it up! If you don't comply, I will have you found in five minutes!"  
   
 $\textsf{\color[RGB]{109, 7, 8}[SYSTEM ERROR]}$  
 "̴͉̇A̸̲̐h̷̪̓,̶͎̑ ̴̹̐f̸̹͗u̸̡͝c̶̢̎k̴̺̂,̴̞̍ ̵̻̎Ș̶̈́t̶̖͘r̶̦͌ḯ̶̟x̴͚̀!̷̔ͅ ̵̤̈́Ṉ̸͛o̷̮͠!̶̢̽ ̶͇̇I̶̥͝'̷̢̃ļ̷̍l̸̙͌ ̴͔̒p̶͚̐ǎ̷̧t̶̼͆c̸̻̑ḩ̵͠ ̷̟̽y̸̲͘ả̸̩ ̵̱̃u̵̫͗p̶̟͗!̶̫̒ ̷̱̆C̷̝̽m̷͚̚o̷̤̅n̸̦͝ ̶͓̾T̸̠̓r̶͍̋e̴̡̅ḛ̴͂t̶̖̒ų̵̽,̶̳͘ ̸̚ͅy̵̱͌o̶͕͝u̶̦̇ ̵̺͠ ̶̣̈́`MUST`̴͔̗̈́̆̾ ̸̞̇h̶̜̰̕͘̕e̵͎̗̲͊l̵̞͍̎̿̕ṗ̶̣ ̸̳̃̈́͜ḩ̴̭̓̊͗e̶̪͎̘̚r̶̤͕̳̔,̵̺͑ ̸̢̠̭̆r̷̥͓͍͆̽i̸͖̋̑͜ġ̴̩̏̀h̷̠͚̑̄̅ṭ̷͍̥̆͘ ̸̮̐̕ḧ̶̥́e̷̖̓͊r̵͎̽͜ȩ̶̻̣̓̚ ̵̫̯̫̀r̴̤͑i̸̖̋̆̍g̷̨̀̉̔h̸͚̣͗̀ͅt̸͕͋̑͜͝-̴̛̟̙̃̓-̸̭̌-̸̧͙̖̀̏-̶͕̱͊͋͝A̴͇̫̰̒ḁ̶̦̺̔̑a̴̛͎̮͈h̷͎̻́̈ ̴̘͂̒F̴̻̘̜͌Ư̸̜̫̊̕C̷̲͋K̴̼͇̆̕!̶̙̞͋͌͛"̶̡͉̓ ̴̜̰̀͑̂ ̵̡̥̂ ̵̶̳̖̀̆͝
@@ -76,7 +76,7 @@ FOCUS.
 5 things I can hear.  
 The fucking X-Ray hasn't been turned off.  
 This fucking $\textsf{\color[RGB]{74, 168, 106}[Dragon]}$  
-...That must be like 15 of Nkumbo's goons.  
+...That must be like 15 of Nekumbo's goons.  
 AN EXPLOSION?  
 A lot of gunfire. Fucking damnit.  
 
